--- a/css/cards.css
+++ b/css/cards.css
@@ -591,7 +591,7 @@
 .grid-collection a .card:hover .card-image::after {
     height: 100%;
     opacity: 1;
-    background-image: url(/assets/images/placeholder.jpg);
+    background-image: url(../assets/images/placeholder.jpg);
     /* replace inline */
 }
 
