--- a/css/articles.css
+++ b/css/articles.css
@@ -68,17 +68,60 @@
     margin-bottom: var(--gap-lg);
 }
 
+.legacy_post p[style*="futuraltbt"] {
+    font-family: var(--base-font-family) !important;
+}
+
 .legacy_post .content h2,
 .legacy_post .content h2 strong {
     font-size: var(--font-size-xxxl);
     font-weight: var(--base-font-weight);
+    text-align: left;
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
+
+.legacy_post p[style*="didot"] {
+    font-family: var(--heading-serif) !important;
+    font-size: var(--font-size-xxxl) !important;
+    font-weight: var(--base-font-weight) !important;
+    text-align: left !important;
+    margin-top: 2rem !important;
+    margin-bottom: 0.5rem !important;
+}
+
+.legacy_post p[style*="20px"] {
+    font-size: var(--font-size-lg) !important;
+    line-height: 1.5 !important;
+    margin-top: 0.5rem !important;
+    margin-bottom: 0.5rem !important;
+    text-align: left !important;
+    color: var(--mono-3) !important;
+}
+
+/* hide old form shortcode block */
+.legacy_post p[style*="futuraltbt"][style*="40px"] {
+    display: none;
+}
+
+
+
 .legacy_post .content,
-.legacy_post .content p{
+.legacy_post .content p {
     max-width: 800px;
+}
+
+@media screen and (max-width: 880px) {
+    .legacy_post .content,
+    .legacy_post .content p {
+        max-width: 90vw;
+        word-break: break-word;
+    }
+    .legacy_post .content h4 {
+        font-size: 1.33rem;
+    }
+    
 }
 
 .legacy_post .content p:last-of-type {
@@ -87,8 +130,16 @@
 
 .legacy_post .content img {
     margin-top: 2rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     min-width: 100%;
+}
+
+/*  */
+
+p[style*="didot"] {
+    /* color: red;
+    font-size: 66px;
+    margin-top: 3rem; */
 }
 
 /* filter */
