--- a/css/buttons.css
+++ b/css/buttons.css
@@ -442,6 +442,14 @@ button.download-link {
     }
 }
 
+@media screen and (max-width: 880px) {
+    a.download-link,
+    button.download-link {
+        margin-top: 0.25rem;
+    }
+    
+}
+
 /* download icon first */
 
 a.download-link-left,
@@ -522,6 +530,8 @@ button.download-link-left {
 .pagination a.page::after { }
 .pagination a.page:hover::after { }
 
+.pagination a.current,
+.pagination a[aria-current="page"],
 .pagination a.page.current {
     font-weight: 600;
     text-decoration: underline;
@@ -537,6 +547,9 @@ button.download-link-left {
     /* text-transform: unset; */
     letter-spacing: unset;
 }
+
+.pagination a.current,
+.pagination a[aria-current="page"], {}
 
 /* ----------------------- */
 /*  */
@@ -623,4 +636,21 @@ div.cta-gold a:hover {
 
 .text_wrap .button-secondary {
     /* margin-top: 1rem; */
+}
+
+
+.button_wrap {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    padding: 0 !important;
+    margin-top: 2rem;
+    
+}
+@media screen and (max-width: 880px) {
+    .button_wrap {        
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 2rem;
+    }
 }
