--- a/css/contact.css
+++ b/css/contact.css
@@ -34,7 +34,8 @@ footer form {
 
 form input,
 form input[type="text"],
-form input[type="email"],
+form input[type="email"]
+form input [type="phone-number"],
 form textarea {
     width: calc(100% - 20px);
     padding: 0.5rem;
@@ -44,6 +45,9 @@ form textarea {
     color: black;
     font-size: var(--font-size-form);
     font-weight: var(--form-font-weight);
+}
+form input.phone-number {
+    width: 100%;
 }
 
 
@@ -74,6 +78,21 @@ select:focus-visible {
     outline: 1px solid rgba(var(--secondary-rgb), 0.3); /* That'll show 'em */
 }
 
+.facetwp-sort {
+    line-height: 1.55;
+}
+select.facetwp-sort-select:focus-visible,
+select.facetwp-sort-select {
+    border: none;
+    outline: none;
+    font-size: var(--font-size-sm-link);
+    padding: 0;
+    padding-right: 2.5rem;
+    width: 120px;
+    max-width: 100%;
+    text-align: right;
+}
+
 .shout_banner select {
     width: 100%;
     padding: 0.5rem;
@@ -81,6 +100,14 @@ select:focus-visible {
     border: 1px solid #D0D5DD;
     min-width: 150px ;
 }
+
+select.country {
+    width: 100%;
+    /* min-width: 280px; */
+    /* text-transform: uppercase; */
+    /* font-weight: 500; */
+}
+select.country::placeholder {}
 
 form textarea,
 .wpcf7-form textarea{ 
@@ -129,6 +156,9 @@ input[type="submit"] {
     align-items: flex-start;
     gap: 0.25rem;
 }
+.form_chckbx_grp {
+    margin-top: 10px;
+}
 .checkbox_group .wpcf7-list-item, 
 .form_chckbx_grp .wpcf7-list-item {
     margin-left: 0;
@@ -150,7 +180,10 @@ input[type="submit"] {
 ::placeholder,
 input::placeholder,
 form input::placeholder,
-form textarea::placeholder {
+form textarea::placeholder,
+form input [type="phone-number"],
+select.country::placeholder,
+select.country option[value=""] {
     /* font-weight: var(--form-font-weight); */
     color: #667085;
     font-size: var(--font-size-form);
@@ -161,7 +194,18 @@ form textarea::placeholder {
 /* ------------------------------------------- */
 /* professionals */
 
+[data-name*="password"] {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}   
 
+[id*="buttonEye-password"] {
+    position: absolute !important;
+    left: 100%;
+    top: 13px;
+}
 
 /* ------------------------------------------- */
 /* professionals */
@@ -178,6 +222,16 @@ form textarea::placeholder {
     gap: var(--gap-sm);
     /* min-width: 580px; */
     max-height: fit-content;
+    transition: var(--transition);
+    opacity: 1;
+    height: auto;
+}
+
+.enquiry_form form,
+#enquiry_form form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
 }
 
 @media screen and (max-width: 880px) {
@@ -187,9 +241,24 @@ form textarea::placeholder {
     #contact_form form,
     .professionals_form form,
     #professionals_form form {
-        min-width: 90vw;
-        width: 100%
+        /* min-width: 90vw; */
+        width: 100%;
+        justify-content: flex-start;
     }
+}
+
+form.sent,
+form [data-status="sent"],
+.enquiry_form form.sent,
+#enquiry_form form.sent,
+.contact_form form.sent,
+#contact_form form.sent,
+.professionals_form form.sent,
+#professionals_form form.sent {
+    display: none;
+    transition: var(--transition);
+    opacity: 0;
+    height: 0;
 }
 
 .enquiry_form input[type="submit"],
@@ -211,11 +280,105 @@ footer form button[type="submit"] {
 #enquiry_form label span {
 }
 
+/* intl phone */
+
+.intl-tel-input {}
+
+.intl-tel-input input, 
+.intl-tel-input input[type=tel], 
+.intl-tel-input input[type=text] {
+    border: 1px solid #D0D5DD;
+}
+
+.intl-tel-input.allow-dropdown .flag-container, 
+.intl-tel-input.separate-dial-code .flag-container { 
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+/* hide flags */
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-2 .selected-flag {
+    width: 38px;
+}
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-3 .selected-flag {
+    width: 50px;
+}
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-4 .selected-flag {
+    width: 58px;
+}
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-5 .selected-flag {
+    width: 66px;
+}
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-2 input, 
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-2 input[type=tel], 
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-2 input[type=text] {
+    padding-left: 42px;
+}
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-3 input, 
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-3 input[type=tel], 
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-3 input[type=text] {
+    padding-left: 56px;
+}
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-4 input, 
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-4 input[type=tel], 
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-4 input[type=text] {
+    padding-left: 64px;
+}
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-5 input, 
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-5 input[type=tel], 
+.intl-tel-input.separate-dial-code.allow-dropdown.iti-sdc-5 input[type=text] {
+    padding-left: 72px;
+}
+.intl-tel-input.separate-dial-code .selected-dial-code {
+    padding-left: 0;
+}
+.intl-tel-input .selected-flag .iti-flag {
+    display: none;
+}
+
+
+/* errors / validation */
+
+.screen-reader-response ul {
+    display: none;
+}
+
+[aria-invalid="true"],
+#enquiry_form [aria-invalid="true"],
+#professionals_form [aria-invalid="true"] {
+    margin-bottom: 0;
+}
+
+label span [class*="not-valid-tip"],
+#enquiry_form label span [class*="not-valid-tip"],
+#professionals_form label span [class*="not-valid-tip"] {
+    font-weight: 500;
+    color: red;
+    /* margin-bottom: 0.5rem; */
+}
+
+.wpcf7-response-output {
+    display: none;
+}
+
+[role="status"] {
+ font-weight: 500;
+}
 
 /* ------------------------- */
 
+.contact .hero-content p {
+    text-align: center;
+}
+@media screen and (max-width: 880px) {
+    .contact .hero-content p {
+        font-size: 16px;
+    }   
+}
+
 .contact-info {
     padding: var(--gutter);
+    gap: 0 var(--gap);
 }
 .contact-info .row {
     max-width: 900px;
@@ -266,22 +429,35 @@ h2.intro-title {
     font-weight: var(--base-font-weight);
 
 } 
+/* 
+.contact-info .row [id*="our"].content h3, 
+.contact-info .row [id*="sales"].content h3{
+    margin-top: var(--gutter);
+} */
+.contact-info .row [id*="our"].content , 
+.contact-info .row [id*="sales"].content {
+    padding-top: var(--gutter);
+}
 
-#headquarters, #showrooms, #salesoffices {
+#headquarters, #showrooms, #salesoffices,
+#our-headquarters, #our-showrooms, #our-salesoffices {
     /* min-width: 200px; */
     width: 100%;
     /* max-width: 50%; */
     gap: var(--gap);
     align-items: flex-start;
 }
-#headquarters {
+#headquarters,
+#our-headquarters {
     /* width: calc(100% *1/3); */
 }
-#showrooms {
+#showrooms,
+#our-showrooms {
     /* width: calc(100% *2/3); */
 }
 @media screen and (max-width: 880px) {
-    #headquarters, #showrooms, #salesoffices {
+    #headquarters, #showrooms, #salesoffices,
+    #our-headquarters, #our-showrooms, #our-salesoffices {
         flex-direction: column;
         width: 100%;
     }
@@ -307,7 +483,9 @@ h2.intro-title {
 }
 
 #salesoffices .listing,
-#globalpartners .listing {
+#our-salesoffices .listing,
+#globalpartners .listing,
+#our-partners .listing {
     flex-direction: row;
     flex-wrap: wrap;
     gap: var(--gap);
@@ -326,6 +504,23 @@ h2.intro-title {
     min-width: 200px;
     align-items: flex-start;
     font-size: var(--font-size-lg);
+}
+@media screen and (max-width: 880px) {
+    [class*="_address"] p,
+    [class*="_address"], 
+    .showroom_address, 
+    .salesoffice_address,
+    .globalpartners_address,
+    .contact-info h5,
+    .contact-info p,
+    .contact-info a {
+        /* font-size: var(--font-size-base); */
+        font-size: 16px;
+    }
+    .contact-info h4 {
+        font-size: 18px;
+    }
+
 }
 
 .salesoffice_address,
@@ -383,7 +578,7 @@ h2.intro-title {
     }   
 }
 
-.country {
+:not(select).country {
     width: 30%;
     min-width: 280px;
     text-transform: uppercase;
