--- a/css/navigation.css
+++ b/css/navigation.css
@@ -31,6 +31,23 @@ header.endHeader {
 }
 
 
+/* notification banner UX */
+
+#wpfront-notification-bar-spacer[style="top: 0px; height: 40px;"] {
+    --hero-height: calc(100vh - var(--header-height) - 40px);
+}
+
+
+#wpfront-notification-bar-spacer[style="top: 0px; height: 0px;"] ~ header {
+    top: 0;
+}
+
+#wpfront-notification-bar-spacer[style="top: 0px; height: 40px;"] ~ header {
+    top: var(--window-top);
+}
+
+ body + .wpfront-notification-bar-open-button.hidden {}
+
 /* nav */
 
 nav {
@@ -456,6 +473,7 @@ nav .wp-block-navigation-submenu ul li a span,
 
 .desktop .submenu .submenu-item a:hover {
     background-color: var(--gray-800);
+    text-decoration: none;
     /* #f3f3f3; */
 }
 
@@ -621,6 +639,10 @@ nav .wp-block-navigation-submenu ul li a span,
         margin-left: 1rem; 
     }
 
+    h2.submenu-title.has-dropdown {
+        padding-bottom: 0.66rem;
+    }
+
     .dropdown .submenu_col
 
     .dropdown ul,
@@ -675,17 +697,24 @@ nav .wp-block-navigation-submenu ul li a span,
         height: 0;
         transition: var(--transition);
     }
+    .has-column {
+        flex-wrap: wrap;
+        max-height: 350px;
+    }
+
     .fullscreen .submenu.open,
     .fullscreen .dropdown.open {
         /* display: block; */
         opacity: 1;
         height: fit-content;
         visibility: inherit;
+        
     }
     .fullscreen .submenu.open {
         margin-bottom: 2rem;
     }
 
+    .fullscreen .submenu.has-column {}
 
     .fullscreen .submenu {
         margin-bottom: 1rem;
@@ -703,7 +732,7 @@ nav .wp-block-navigation-submenu ul li a span,
 
     .fullscreen .submenu-item:first-of-type {
         /* padding-top: 1rem; */
-        padding-top: 0.333rem;
+        /* padding-top: 0.333rem; */
     }
 
     .fullscreen .submenu-link {
@@ -713,6 +742,11 @@ nav .wp-block-navigation-submenu ul li a span,
         color: var(--primary);
         text-decoration: none;
         transition: var(--transition);
+    }
+
+    .submenu-link.more-link {
+        font-weight: var(--menu-font-weight);
+        /*  */
     }
 /* end mobile */
 }
@@ -821,6 +855,7 @@ nav .wp-block-navigation-submenu ul li a span,
         background-color: white;
         z-index: 1000;
         overflow-y: auto;
+        overflow-x: hidden;
         /* padding: 20px; */
         transition: all 0.3s ease-in-out;
         /* transition-delay: 2s; */
@@ -880,11 +915,17 @@ footer nav {
     align-items: flex-start;
     justify-content: flex-start;
     gap: 2rem;
+    flex-wrap: wrap;
 }
 @media screen and (max-width: 880px){
     footer nav {
-        flex-direction: column;
-        gap: 0;
+        /* flex-direction: column;
+        gap: 0; */
+    }
+}
+@media screen and (max-width: 600px){
+    footer nav {
+        flex-wrap: wrap;
     }
 }
 footer .menu_group,
@@ -948,7 +989,7 @@ footer .footer-menu-link {
 @media screen and (max-width: 880px){
        
     footer li.menu-item:has(a) {
-        display: none;
+        /* display: none; */
     }
     /* to do: */
     /* -> add .active with JS */
@@ -957,7 +998,7 @@ footer .footer-menu-link {
     }
 
     footer li.footer-menu-item:has(a) {
-        display: none;
+        /* display: none; */
     }
     /* to do: */
     /* -> add .active with JS */
